--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 I am sadab
-<a href="Sadab-7878.github.io/Page 1.html ">Visit W3Schools.com!</a>
+<a href="Page 1.html ">Go to page 1</a>
 </body>
 <html/>
 
