--- a/Page 1.html
+++ b/Page 1.html
@@ -7,5 +7,6 @@
 <p>Motijheel Ideal School and College!.</p>
 <p>SSC 2016 and HSC 2019!.</p>
 <p>I am very much passionate about for being a programmer that's why I choose CSE!.</p>
+<a href="index.html">Go to page 1</a>
 </body>
 </html>
