--- a/Page 1.html
+++ b/Page 1.html
@@ -2,13 +2,10 @@
 <body>
 <font color="green"><h1>Acadamic information</h1></font>
 <p>NAME : Sadab Uz Zaman</p>
-<p>ID   : 011193010</p>
-<font color="darkblue"><h1>School Name</h1> </font> 
+<p>ID   : 011193010<p>
 <p>Ideal school &amp; college, Motijheel, Dhaka-1000</p>
-<a href="https://www.facebook.com/idealschoolandcollegedhaka/">Facebook Page</a>
-<font color="brown"> <h1>College Name</h1> </font>
+<a href="https://ww1> </font> w.facebook.com/idealschoolandcollegedhaka/">Facebook Page</a>
 <p>Birshrestha Noor Mohammad Public College</p>
-<font color="orange"><h1>Why did I choose CSE?</h1> </font> 
 <p>I choose CSE because I love the fact of working with system. I Want to know the secret behind small and large screen device. </p>
 <br>
 <br>
