--- a/Page 2.html
+++ b/Page 2.html
@@ -15,5 +15,6 @@
 <br>
 <br>
 <img src="https://images.theconversation.com/files/284005/original/file-20190714-173342-1x8g91q.jpg?ixlib=rb-1.1.0&rect=0%2C15%2C5051%2C3311&q=45&auto=format&w=496&fit=clip.jpg"hight="50%"width="50%">
+<a href="Page 1.html">Go to Page 1</a>
 </body>
 </html>
