--- a/Page 2.html
+++ b/Page 2.html
@@ -5,7 +5,7 @@
 <body> 
     <h1>Hobbies </h1>
    <p> Playing Cricket </p>
-  <img src="close-up-of-budgerigars-perching-on-branch-909976322-5b4bf18746e0fb005bc62377.jpg"hight="50%"width="100%" >
+  <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiGzIqnoYTmAhWHWisKHSCYDPwQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.britannica.com%2Fsports%2Fcricket-sport&psig=AOvVaw2zzk1gTBUu6X0S0tnj48NN&ust=1574733425774652" >
   <br>
   <br>                                                                                                              
  <img src="parakeet-budgie-with-golf-ball.jpg"hight=50%"width="30%">
