--- a/Page 2.html
+++ b/Page 2.html
@@ -5,7 +5,7 @@
 <body> 
     <h1>Hobbies </h1>
    <p> Playing Cricket </p>
-  <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwitwLf2o4TmAhV0muYKHSDDCm8QjRx6BAgBEAQ&url=https%3A%2F%2Fwww.britannica.com%2Fsports%2Fcricket-sport&psig=AOvVaw2YK0EdrsXAqhV5nEYZuLPC&ust=1574734130596910" >
+  <img src="Cricket.jpg"/>
   <br>
   <br>                                                                                                              
  <img src="parakeet-budgie-with-golf-ball.jpg"hight=50%"width="30%">
