--- a/Page 2.html
+++ b/Page 2.html
@@ -5,7 +5,7 @@
 <body> 
     <h1>Hobbies </h1>
    <p> Playing Cricket </p>
-  <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiGwc6jpoTmAhWCT30KHRnGAz0QjRx6BAgBEAQ&url=https%3A%2F%2Fwww.britannica.com%2Fsports%2Fcricket-sport&psig=AOvVaw1sA3h9nTsU-4I898Ne_EDa&ust=1574734762789887"/>
+  <img src="Jonny-Bairstow-batting-semifinal-match-England-Australia-2019.jpg" height="50%" width="40%">
   <br>
   <br>                                                                                                              
  <img src="parakeet-budgie-with-golf-ball.jpg"hight=50%"width="30%">
