--- a/Page 2.html
+++ b/Page 2.html
@@ -5,7 +5,7 @@
 <body> 
     <h1>Hobbies </h1>
    <p> Playing Cricket </p>
-  <img src="Jonny-Bairstow-batting-semifinal-match-England-Australia-2019.jpg" height="50%" width="40%">
+  <img src="https://Jonny-Bairstow-batting-semifinal-match-England-Australia-2019.jpg" height="50%" width="40%">
   <br>
   <br>                                                                                                              
  <img src="parakeet-budgie-with-golf-ball.jpg"hight=50%"width="30%">
