--- a/Page 2.html
+++ b/Page 2.html
@@ -5,6 +5,6 @@
 <body>
   <h1>hobbies</h1>
   <p>Playing Cricket</p>
-<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwii_9uwrITmAhUkXHwKHVmnAnIQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.britannica.com%2Fsports%2Fcricket-sport&psig=AOvVaw0LhadDCF88ahy3MhbH6SZ0&ust=1574736401854436.jpg"height="50%" width="40%">
+<img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwii_9uwrITmAhUkXHwKHVmnAnIQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.britannica.com%2Fsports%2Fcricket-sport&psig=AOvVaw0LhadDCF88ahy3MhbH6SZ0&ust=1574736401854436.jpeg"height="50%" width="40%">
 </body>
 </html>
