--- a/Page 1.html
+++ b/Page 1.html
@@ -7,8 +7,8 @@
 <p>Ideal school &amp; college, Motijheel, Dhaka-1000</p>
 <a href="https://www.facebook.com/idealschoolandcollegedhaka/">Facebook Page</a>
 <font color="brown"> <h1>College Name</h1> </font>
-<p>Cambrian College</p>
-<a href="https://www.facebook.com/DigitalCambrian/?__tn__=%2Cd%2CP-R&amp;eid=ARDIHDuhCBOfKCxRe7ja2f7YP0LcrT_xzivJLmnV-wJhKbz8TqJvMfSQWSruIgu3kv2WvU3jaISrFV6V">Facebook Page </a>
+<p>Birshreshtha Noor Mohammad Public College</p>
+<a href="https://www.facebook.com/bnmpc.official/">Facebook Page </a>
 <font color="Red"><h1>Why did I choose CSE?</h1> </font> 
 <p>I choose CSE because I love to do programming. </p>
 <br>
