--- a/Page 1.html
+++ b/Page 1.html
@@ -1,16 +1,16 @@
 <html>
 <body>
 <font color="green"><h1>Acadamic information</h1></font>
-<p>NAME : MD. Mahmudul Islam</p>
-<p>ID   : 011193012</p>
-<font color="darkblue"><h1>School Name</h1> </font> 
+<p>NAME : Sadab Uz Zaman</p>
+<p>ID   : 011193010</p>
+<font color="Orange"><h1>School Name</h1> </font> 
 <p>Ideal school &amp; college, Motijheel, Dhaka-1000</p>
 <a href="https://www.facebook.com/idealschoolandcollegedhaka/">Facebook Page</a>
 <font color="brown"> <h1>College Name</h1> </font>
 <p>Birshreshtha Noor Mohammad Public College</p>
 <a href="https://www.facebook.com/bnmpc.official/">Facebook Page </a>
-<font color="orange"><h1>Why did I choose CSE?</h1> </font> 
-<p>I choose CSE because I love the fact of working with system. I Want to know the secret behind small and large screen device. </p>
+<font color="Green"><h1>Why did I choose CSE?</h1> </font> 
+<p>I choose CSE because I love to do programming. </p>
 <br>
 <br>
 <a href="page2.html">Go to page 2</a>  
