--- a/Page 1.html
+++ b/Page 1.html
@@ -13,6 +13,6 @@
 <p>I choose CSE because I love to do programming. </p>
 <br>
 <br>
-<a href="page2.html">Go to page 2</a>  
+<a href="Page 2.html">Go to page 2</a>  
 </body>
 </html>
