--- a/Page 1.html
+++ b/Page 1.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<font color="green"><h1>Acadamic Information</h1></font>
+<font color="green"><h1>Academic Information</h1></font>
 <p>NAME : Sadab Uz Zaman</p>
 <p>ID   : 011193010</p>
 <font color="Green"><h1>School Name</h1> </font> 
