--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Hello World</title>
 <body bgcolor="Green">
   <marquee direction="left">
-  <h1>Welcome to my page</h1>
+  <h1>Welcome To My Page</h1>
     </marquee>
   
   <a href="Page 1.html">Go to page 1</a>
